test/cli/test-legacy-policies/legacy-exception/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: excepted-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
