test/cli/test-legacy-policies/legacy-exception/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: always-pass
  resources:
  - excepted-pod
  result: pass
